@@ -1,3 +1,10 @@
+2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Update handling of statistics.
+
+	* benchmarks/lib/benchmark.c: Ensure that measurements for the
+	work stage are made at the target place.
+
 2010-06-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Use exclusive creates in benchmarks.
